<resources>
    <string-array name="Spinner_items">
        <item>Generaliste</item>
        <item>Gastrologue</item>
        <item>Gynécologue</item>
        <item>Chirurgent dentiste</item>
        <item>Orthopédiste</item>
        <item>Dermatologue</item>
        <item>Ophtalmologiste</item>
        <item>Cardiologue</item>
        <item>Pédiatre</item>
        <item>Pneumologue</item>
        <item>Psychiatre</item>
    </string-array>
    <string name="pr_nom">prenom</string>
    <string name="app_name">SantéClick</string>
    <string name="hopital">Hopital</string>
    <string name="clinique">Clinique</string>
    <string name="laboratoire">Laboratoire</string>
    <string name="pharmacie">Pharmacie</string>
    <string name="cabinet_medical">Cabinet Medical</string>
    <string name="radiologue">Radiologue</string>
    <string name="nous_sommes_dans_la_partie_cabin_et_medical">Nous sommes dans la partie cabin,et medical</string>
    <string name="c_est_bon">c\'est bon</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="g_n_raliste">Généraliste</string>
    <string name="ophtalmologiste">Ophtalmologiste</string>
    <string name="p_diatre">Pédiatre</string>
    <string name="d_rmatologue">Dérmatologue</string>
    <string name="orthop_diste">Orthopédiste</string>
    <string name="chirugien_dentiste">Chirugien Dentiste</string>
    <string name="psychiatre">Psychiatre</string>
    <string name="cardiologue">Cardiologue</string>
    <string name="pneumologue">Pneumologue</string>
    <string name="gastrologue">Gastrologue</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="checkbox">checkbox</string>
    <string name="le_nom">Le nom</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="ajouter">Ajouter</string>
    <string name="e_mail">E-Mail</string>
    <string name="ophtalmologue">Ophtalmologue</string>
    <string name="inscription">Inscription</string>
    <string name="dermatologue">Dermatologue</string>
    <string name="gyn_cologue">Gynécologue</string>
    <string name="details_descrcript">details descrcript</string>
    <string name="detail_clinique_adresse">detail clinique adresse</string>
    <string name="detail_clinique_nemero">detail clinique nemero</string>
    <string name="specialiste">specialiste</string>
    <string name="textview">textview</string>
    <string name="liste_des_medecins">liste_des_medecins</string>
    <string name="entrer_specialiste">entrer_specialiste</string>
</resources>
