<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="600dp"
        android:background="#FAE88C"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cab"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/cabinet_medical" />

        <Button
            android:id="@+id/cli"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/clinique" />

        <Button
            android:id="@+id/lab"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/laboratoire" />

        <Button
            android:id="@+id/pha"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/pharmacie" />

        <Button
            android:id="@+id/hop"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/hopital" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>